--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -15,7 +15,8 @@
                 <table>
                     <tr>
                     <td>아이디</td>
-                    <td><input type="text" name="userid" id="userid" th:placeholder="${user.userid}"></td>
+                    <td><input type="text" th:placeholder="|변경불가(ID: ${user.userid})|" readonly></td>
+                    <td><input type="hidden" name="userid" id="userid" th:placeholder="${user.userid}" readonly th:value="${user.userid}"></td>
                 </tr>
                 <tr>
                     <td>비밀번호</td>
@@ -30,12 +31,11 @@
                     <td><input type="text" name="email" id="email" th:placeholder="${user.email}"></td>
                 </tr>
             </table>
-            <input type="submit" value="헤헤" onclick=wow()>
+            <input type="submit" value="수정" onclick=changeNull()>
         </form>
         </div>
     </div>
 </body>
-<script>
-</script>
+
 
 </html>
