--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -14,28 +14,37 @@
             <form action="/user/edit" method="post">
                 <table>
                     <tr>
-                    <td>아이디</td>
-                    <td><input type="text" th:placeholder="|변경불가(ID: ${user.userid})|" readonly></td>
-                    <td><input type="hidden" name="userid" id="userid" th:placeholder="${user.userid}" readonly th:value="${user.userid}"></td>
-                </tr>
-                <tr>
-                    <td>비밀번호</td>
-                    <td><input type="text" name="password" id="password" th:placeholder="${user.password}"></td>
-                </tr>
-                <tr>
-                    <td>이름</td>
-                    <td><input type="text" name="username" id="username" th:placeholder="${user.username}"></td>
-                </tr>
-                <tr>
-                    <td>이메일</td>
-                    <td><input type="text" name="email" id="email" th:placeholder="${user.email}"></td>
-                </tr>
-            </table>
-            <input type="submit" value="수정" onclick=changeNull()>
-        </form>
+                        <td>아이디</td>
+                        <td><input type="text" th:placeholder="|변경불가(ID: ${user.userid})|" readonly></td>
+                        <td><input type="hidden" name="userid" id="userid" th:placeholder="${user.userid}" readonly
+                                th:value="${user.userid}"></td>
+                    </tr>
+                    <tr>
+                        <td>비밀번호</td>
+                        <td><input type="text" name="password" id="password" th:placeholder="${user.password}"></td>
+                    </tr>
+                    <tr>
+                        <td>이름</td>
+                        <td><input type="text" name="username" id="username" th:placeholder="${user.username}"></td>
+                    </tr>
+                    <tr>
+                        <td>이메일</td>
+                        <td><input type="text" name="email" id="email" th:placeholder="${user.email}"></td>
+                    </tr>
+                </table>
+                <input type="submit" value="수정">
+                <input type="button" value="삭제" onclick="userDelete()">
+            </form>
         </div>
     </div>
 </body>
-
-
+<script>
+    function userDelete() {
+        if(confirm('하하하')){
+            location.href = '/user/delete?userid=[(${user.userid})]';
+        }else {
+            alert('취소를 선택하셨습니다.')
+        }
+    }
+</script>
 </html>
